force-app/main/default/objects/abc_Product__c/abc_Product__c.object-meta.xml
<CustomObject>
    <label>Product</label>
    <pluralLabel>Products</pluralLabel>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>