force-app/main/default/objects/abc_Product__c/fields/abc_Available_Quantity__c.field-meta.xml
<CustomField>
    <fullName>abc_Available_Quantity__c</fullName>
    <inlineHelpText>Reduced by automation/code when an order is delivered.</inlineHelpText>
    <label>Available Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>