force-app/main/default/objects/abc_Product__c/fields/abc_Buying_price__c.field-meta.xml
<CustomField>
    <fullName>abc_Buying_price__c</fullName>
    <description>the price paid by the pharmacy to buy the product.</description>
    <label>Buying price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>