force-app/main/default/objects/abc_Product__c/fields/abc_Profit__c.field-meta.xml
<CustomField>
    <fullName>abc_Profit__c</fullName>
    <description>the profit gained from selling the product.</description>
    <formula>( abc_Unit_Price__c  - abc_Buying_price__c ) / abc_Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>