force-app/main/default/objects/abc_Product__c/fields/abc_SKU__c.field-meta.xml
<CustomField>
    <fullName>abc_SKU__c</fullName>
    <label>Product SKU</label>
    <type>Text</type>
    <length>50</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <inlineHelpText>External ID, Unique. Allows Ionic app to pass real-world product codes instead of Salesforce IDs.</inlineHelpText>
</CustomField>