force-app/main/default/objects/abc_Product__c/fields/abc_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>abc_Unit_Price__c</fullName>
    <inlineHelpText>Master price referenced by the API.</inlineHelpText>
    <label>Unit Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>