force-app/main/default/objects/abc_Product__c/validationRules/abc_price_can_not_be_0_or_less.validationRule-meta.xml
<ValidationRule>
    <fullName>abc_price_can_not_be_0_or_less</fullName>
    <active>true</active>
    <description>the unit price or buying price can not be blank or 0 or less</description>
    <errorConditionFormula>OR( ( abc_Unit_Price__c &lt;= 0),

     ( ISBLANK(abc_Unit_Price__c) ),

    ( abc_Buying_price__c &lt;= 0),

    ( ISBLANK(abc_Buying_price__c) )

    
)</errorConditionFormula>
    <errorMessage>the unit price or buying price can not be blank or 0 or less</errorMessage>
</ValidationRule>